app/assets/stylesheets/components/_challenge_card.scss
// challenges dashboard page
.challenge-card {
  position: relative;
  display: flex;
  padding: 16px 24px;
  justify-content: space-between;
  align-items: center;
  background: white;
  box-shadow: 0 0 8px rgba(0,0,0,0.2);
  border-radius: 4px;
  margin: 8px;
  .link {
    text-decoration: none;
  }
  .avatar {
    margin-left: 8px;
  }
  .date {
    font-size: 14px;
  }
  .fa-arrow-up {
    transform: rotate(45deg);
    position: absolute;
    margin: -22px 0px 0px -18px;
    font-size: 14px;
  }
  .fa-arrow-down {
    transform: rotate(-45deg);
    position: absolute;
    margin: -22px 0px 0px -18px;
    font-size: 14px;
  }
}

.status-arrow {
  width: 75px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  .fa-angle-right {
    font-size: 16px;
    margin-top: 4px;
  }
}

.name-and-date {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  margin-left: 16px;
  .player-name {
    color: $black;
  }
}

.vs-container {
  display: flex;
  justify-content: center;

  // position: relative;
}

// challenge view page "vs" for opponent
.other-user-opponent-vs {
  clip-path: polygon(5% 0, 100% 0, 100% 100%, 0% 100%);
  margin-right: -5px;
  height: 30vh;
  background-size:     cover;
  background-repeat:   no-repeat;
  background-position: center center;
  border-top-right-radius: 8px;
  z-index: 2;
}

.current-user-vs {
  top-left-radius: 4px;
  clip-path: polygon(0 0, 100% 0, 95% 100%, 0% 100%);
  height: 30vh;
  background-size:     cover;
  background-repeat:   no-repeat;
  background-position: center center;
  margin-right: 10px;
  border-top-left-radius: 8px;
  z-index: 1;
}

#vs {
  position: absolute;
  left: 47%;
  top: 30%;
  z-index: 99;
  font-size: 24px;
  color: $blue;
  }

  .current-user-name {
    position: absolute;
    left: +22%;
    top: 33%;
    color: white;
    text-align: center;
  }

  .opponent-name {
    position: absolute;
    right: 26%;
    top: 33%;
    color: white;
    text-align: center;
  }

.challenge-info {
  padding: 30px 5px 30px 5px;
  margin-top: 20px;


}

// this is for the challenge card styling
.blue-box-b-left {
  margin: 16px 3px 8px 3px;
  background-color: $blue;
  color: white;
  font-size: 16px;
  border-radius: 2px;
  padding-left: 3px;
  padding-right: 3px;
  text-align: center;
}

.ranking-b-left {
  position: absolute;
  display: flex;
  align-items: baseline;
  color: $black;
  font-weight: bold;
  font-size: 16px;
  background-color: $gray;
  // width: 70px;
  left: 0px;
  bottom: 0px;
  border-top-right-radius: 5px;
  padding-right: 6px;
  padding-left: 6px;
  .rank-b-left {
    font-family: 'Saira Extra Condensed', sans-serif;
    font-size: 30px;
    margin-left: 3px;
    color: white;
    text-shadow: 0.5px 0.5px 2px black;
  }
}

.blue-vs-element {
  color: white;
  background-color: $blue;
  font-size: 16px;
  border-radius: 2px;
  padding-left: 4px;
  padding-right: 4px;
    h4{
    }
    display: inline-block;
  }

  .short-test{
    color: white;
    background-color: $blue;
    display: inline-block;
    border-radius: 2px;
    padding-left: 4px;
    padding-right: 4px;
    margin-top: 2px;
  }


.bluevs {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-direction: row;
  padding-top: 1px;
}

.bluevs {
  // h4 {
  margin: 8px 3px 8px 0;
  padding-left: 3px;
  padding-right: 3px;

  // }
}

.skills-challenge {
  display: flex;
  // flex-wrap: wrap;
  margin: 10px;
  margin-top: 0;

}

.message {
  margin-top: 20px;
  margin-bottom: 20px;
}



.bluevs-right {
 // h4 {
  text-align: right;
  margin-right: 8px;
  // background-color: $blue;
 // }
}

.bluevs-left {
 // h4 {
  text-align: left;
  margin-left: 8px;
  display: flex;
  justify-content: space-around;
  flex-direction: column;
  // background-color: $blue;
 // }
}

.ranking-b-left {
  position: absolute;
  display: flex;
  align-items: baseline start;
  color: $black;
  font-weight: bold;
  font-size: 16px;
  background-color: $gray;
  // width: 70px;
  left: 0px;
  bottom: 0px;
  border-top-right-radius: 5px;
  padding-right: 6px;
  padding-left: 6px;
  .rank-b-left {
    font-family: 'Saira Extra Condensed', sans-serif;
    font-size: 30px;
    margin-left: 3px;
    color: white;
    text-shadow: 0.5px 0.5px 2px black;
  }
}

// This whole sections is to display the cards next to each other and avoid becoming two rows when
// risized to the smallest screen

.section {
  position: relative;
  clear: both;
  padding-top: 10px;
  margin: 0px;

}

/*  COLUMN SETUP  */
.col {
  display: block;
  float:left;
  margin: 0% 0 0% 0%;
}
.col:first-child { margin-left: 0;

}

/*  GROUPING  */
.group:before,
.group:after { content:""; display:table; }
.group:after { clear:both;}
.group { zoom:1; /* For IE 6/7 */ }

.span_2_of_2 {
  width: 100%;
  margin-right: 50px;
}
.span_1_of_2 {
  width: 49.5%;
}

